add endpoint for get monthly pick users
