# storage/api-docs/api-docs-v1.json
@@ -15,6 +15,96 @@
         }
     ],
     "paths": {
+        "/api/v1/analytics/monthly-rank": {
+            "get": {
+                "tags": [
+                    "Analytics"
+                ],
+                "summary": "Получение ежемесячного рейтинга пользователей",
+                "description": "Возвращает топ-100 пользователей по сумме транзакций за каждый месяц, включая их ранг и среднее значение суммы транзакций (по всем пользователям) за этот месяц. Результат кэшируется на 1 час.",
+                "operationId": "ac0bcc810fa1ce43569042aa316d84fc",
+                "responses": {
+                    "200": {
+                        "description": "Успешное получение аналитики",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "description": "Массив с данными аналитики",
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "user_id": {
+                                                        "description": "ID пользователя",
+                                                        "type": "integer",
+                                                        "example": 2
+                                                    },
+                                                    "month": {
+                                                        "description": "Месяц агрегации (YYYY-MM)",
+                                                        "type": "string",
+                                                        "example": "2023-10"
+                                                    },
+                                                    "total_amount": {
+                                                        "description": "Общая сумма транзакций пользователя за месяц",
+                                                        "type": "integer",
+                                                        "example": 300000
+                                                    },
+                                                    "user_rank": {
+                                                        "description": "Ранг пользователя в указанном месяце (1 - лидер)",
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "monthly_avg": {
+                                                        "description": "Средняя сумма транзакций за этот месяц среди всех пользователей",
+                                                        "type": "integer",
+                                                        "example": 200000
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера (например, недоступна БД или кэш)",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "type": {
+                                            "type": "string",
+                                            "example": "http://localhost:8080/errors/server-error"
+                                        },
+                                        "title": {
+                                            "type": "string",
+                                            "example": "Server Error"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 500
+                                        },
+                                        "detail": {
+                                            "type": "string",
+                                            "example": "Internal Server Error."
+                                        },
+                                        "instance": {
+                                            "type": "string",
+                                            "example": "/api/v1/analytics/monthly-rank"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/imports": {
             "post": {
                 "tags": [
@@ -233,6 +323,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Analytics",
+            "description": "Analytics"
+        },
         {
             "name": "Imports",
             "description": "Imports"
